# ensemble_svs_with_interactions

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
nnsvs/: gen.py  model.py  train_util.py  util.py
nnsvs/acoustic_models/: __init__.py  multistream.py  tacotron.py  tacotron_f0.py  util.py
nnsvs/data/: __init__.py  data_source.py
nnsvs/diffsinger/: __init__.py  diffusion.py
recipes/_common/db/jaCappella_multi/: data_prep.py  data_prep_multitrack.py  data_prep_sub.py  split_by_song.py  split_by_song_multitrack.py
recipes/_common/db/musical_scores/: .gitignore  README_EN.md  README_JP.md
recipes/_common/db/musical_scores/alignment/: 0_score_separation.sh  1_label_synthesis.sh  2_neutrino_synthesis.sh  3_label_alighment.sh  audio_recordings  config.yaml  yaml_parser.sh
recipes/_common/db/musical_scores/alignment/scripts/: add_stretchs_for_melisma_lyrics.py  label_alignment.py  label_synthesis.py  neutrino_waveform_synthesis.py  separate_parts_from_musicxml.py  util.py
recipes/_common/hed/: jp_dev_latest_for_human.hed
recipes/_common/spsvs/: evaluate_timing.sh  evaluate_timing_multitrack.sh  feature_generation_multitrack.sh  run_common_steps_dev.sh  synthesis.sh  synthesis_multitrack.sh  train_acoustic.sh  train_acoustic_multitrack.sh  train_duration_multitrack.sh  train_timelag_multitrack.sh
recipes/jaCappella_ritsu/dev-48k-world-multitrack/: README_en.md  README_jp.md  config.yaml  run.sh
recipes/jaCappella_ritsu/dev-48k-world-multitrack/conf/prepare_features/acoustic/: multitrack_nnsvs_contrib_static_only.yaml
(+15 files in other folders)
